welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:3: error: value and is not a member of Boolean
  if (a>= 13 and a <= 19)
             ^countTeen:5: error: value and is not a member of Boolean
  if (b>= 13 and b <= 19)
             ^countTeen:7: error: value and is not a member of Boolean
  if (c>= 13 and c <= 19)
             ^countTeen:9: error: value and is not a member of Boolean
  if (d>= 13 and d <= 19)
             ^