welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
	var compteur = 0
  if (a>= 13 and a <= 19)
  	compteur = compteur + 1
  if (b>= 13 and b <= 19)
  	compteur = compteur + 1
  if (c>= 13 and c <= 19)
  	compteur = compteur + 1
  if (d>= 13 and d <= 19)
  	compteur = compteur + 1
  return compteur
}